updated file directory

--- a/apps/tutorial_1/first_spark_program.ipynb
+++ b/apps/tutorial_1/first_spark_program.ipynb
@@ -7,26 +7,8 @@
    "outputs": [
     {
      "data": {
-      "text/html": [
-       "\n",
-       "        <div>\n",
-       "            <p><b>SparkContext</b></p>\n",
-       "\n",
-       "            <p><a href=\"http://172.23.2.8:4040\">Spark UI</a></p>\n",
-       "\n",
-       "            <dl>\n",
-       "              <dt>Version</dt>\n",
-       "                <dd><code>v2.2.1</code></dd>\n",
-       "              <dt>Master</dt>\n",
-       "                <dd><code>local[2]</code></dd>\n",
-       "              <dt>AppName</dt>\n",
-       "                <dd><code>PySparkShell</code></dd>\n",
-       "            </dl>\n",
-       "        </div>\n",
-       "        "
-      ],
       "text/plain": [
-       "<SparkContext master=local[2] appName=PySparkShell>"
+       "''"
       ]
      },
      "execution_count": 1,
@@ -42,7 +24,19 @@
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'sc' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-2-6dacee465ff4>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0mfilePath\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m\"file:///Users/delshawnkirksey/Downloads/eth.csv\"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0meth\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0msc\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtextFile\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfilePath\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;31m# a transformation - data from the csv is loaded into an RDD named eth\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m: name 'sc' is not defined"
+     ]
+    }
+   ],
    "source": [
     "filePath = \"file:///Users/delshawnkirksey/Downloads/eth.csv\"\n",
     "eth = sc.textFile(filePath) # a transformation - data from the csv is loaded into an RDD named eth"
